# genAi

./: .gitignore
AdaptiveRag/: ingestion.py
AdaptiveRag/graph/: constants.py  models.py  state.py
AdaptiveRag/graph/edges/: router_hallucination.py  router_post_retreival.py  router_query.py
Knowledge/scripts/: data_scrapper.js  data_scrapper2.js
LangGraph/: config.py  first_agent.py  prebuilt_agent.py  requirements.txt
LangGraph/WorkFlows/: basic_block.py  config.py  greeting.py  higher_or_lower.py  job_search_workflow.py  prompt_chaining.py  pyproject.toml  skills_description.py
LlamaIndex/BasicRag/: config.py  ingest_docs.py  nltk-download.py
MCP/mcp_clients/: client.py  pyproject.toml
MCP/mcp_servers/: pyproject.toml
Tools/: job_data_tools.py
